<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_map"
        android:title="@string/bar_item_locations" />

    <item
        android:id="@+id/navigation_items"
        android:icon="@drawable/ic_items"
        android:title="@string/bar_item_items" />

    <item
        android:id="@+id/navigation_pokedex"
        android:icon="@drawable/ic_pokedex"
        android:title="@string/bar_item_pokedex" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/bar_item_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/bar_item_settings" />

</menu>